# signals-agent-backend

./: .gitignore  A2A_IMPLEMENTATION.md  A2A_IMPLEMENTATION_SUMMARY.md  AUDIENCE_AGENT_INTEGRATION.md  CLAUDE.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  Dockerfile  FINAL_TEST_RESULTS.md  FLY_DEPLOYMENT.md  GITHUB_ISSUE.md  HARVINADS_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  README.md  README_HARVINADS.md  TESTING_GUIDE.md  a2a_alignment.md  a2a_fastapi_server.py  a2a_official_server.py  a2a_server.py  client.py  config.json.sample  config_loader.py  database.py  database_dump.json  demo_web.py  env.example  fly.toml  fly_schedule.toml  index.html  keep_alive.py  load_peer39_data.py  load_sample_data.py  main.py  multi_protocol_server.py  parse_peer39_data.py  principals_dump.json  production_hardening.py  protocol_abstraction.py  (+34 more)
.devcontainer/: devcontainer.json
adapters/: __init__.py  base.py  index_exchange.py  liveramp.py  manager.py  test_index_exchange.py  test_liveramp.py
