[project]
name = "signals-agent"
version = "0.1.0"
description = "Reference implementation of a Signals Activation Protocol agent"
authors = [
    {name = "Scope3", email = "engineering@scope3.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.32.4",
    "a2a-sdk>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
